# essential-builder

./: .gitignore  Cargo.toml  README.md  flake.nix  overlay.nix  shell.nix
.github/workflows/: ci.yml
crates/builder/: Cargo.toml  README.md
crates/builder-api/: Cargo.toml  README.md
crates/builder-api/src/: endpoint.rs  lib.rs
crates/builder-api/tests/: endpoint.rs  util.rs
crates/builder-cli/: Cargo.toml  README.md
crates/builder-cli/src/: lib.rs  main.rs  tests.rs
crates/builder-db/: Cargo.toml  README.md
crates/builder-db/sql/create/: solution.sql  solution_failure.sql  solution_set.sql  solution_set_failure.sql  submission.sql
crates/builder-db/sql/delete/: oldest_solution_failures.sql  oldest_solution_set_failures.sql  solution.sql  solution_set.sql  solutions_older_than.sql
crates/builder-db/sql/insert/: solution.sql  solution_failure.sql  solution_set.sql  solution_set_failure.sql  submission.sql
crates/builder-db/sql/query/: get_solution.sql  get_solution_set.sql  latest_solution_failures.sql  latest_solution_set_failures.sql  list_solution_failures.sql  list_solution_set_failures.sql  list_solution_sets.sql  list_solutions.sql  list_submissions.sql
crates/builder-db/src/: error.rs  lib.rs  pool.rs  sql.rs
crates/builder-db/tests/: create.rs  delete.rs  insert.rs  query.rs  util.rs
crates/builder-types/: Cargo.toml  README.md
crates/builder-types/src/: lib.rs
crates/builder/src/: db.rs  error.rs  lib.rs  state.rs
crates/builder/src/state/: mutations.rs  view.rs
crates/builder/tests/: build_block.rs
pkgs/: essential-builder.nix
