[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Essential Contributions <contact@essentialcontributions.com>"]
homepage = "https://essential.builders/"
repository = "https://github.com/essential-contributions/essential-builder"

[workspace.dependencies]
essential-hash = "0.3.0"
essential-node = { git = "ssh://git@github.com/essential-contributions/essential-node.git" }
essential-types = "0.2.0"
postcard = { version = "1.0.8", features = ["alloc"] }
rusqlite = "0.32"
serde = "1"
thiserror = "1"

essential-builder = { path = "crates/builder", version = "0.1.0" }
essential-builder-db = { path = "crates/builder-db", version = "0.1.0" }
