[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Essential Contributions <contact@essentialcontributions.com>"]
homepage = "https://essential.builders/"
license = "Apache-2.0"
repository = "https://github.com/essential-contributions/essential-builder"

[workspace.dependencies]
anyhow = "1"
axum = "0.7.5"
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
essential-check = "0.6.0"
essential-hash = "0.4.0"
essential-node = "0.3.0"
essential-node-api = "0.3.0"
essential-node-db = "0.3.0"
essential-node-types = "0.1.0"
essential-types = "0.3.0"
futures = "0.3.30"
hex = "0.4.3"
http = "1.1.0"
hyper = "1.3.1"
hyper-util = "0.1.7"
num_cpus = "1.16"
postcard = { version = "1.0.8", features = ["alloc"] }
reqwest = { version = "0.12.5", features = ["json", "stream"] }
rusqlite = "0.32"
rusqlite-pool = "0.1.1"
serde = "1"
serde_json = "1.0.114"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = "0.7.11"
tower = "0.4.13" # Update to 0.5 pending axum tower update
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }

essential-builder = { path = "crates/builder", version = "0.4.0" }
essential-builder-api = { path = "crates/builder-api", version = "0.3.0" }
essential-builder-db = { path = "crates/builder-db", version = "0.2.0" }
essential-builder-types = { path = "crates/builder-types", version = "0.1.0" }
