[package]
name = "essential-builder-api"
description = "API implementation for the Essential builder"
version = "0.6.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
essential-builder-db = { workspace = true }
essential-builder-types = { workspace = true }
essential-types = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
hyper = { workspace = true, features = ["http2"] }
hyper-util = { workspace = true, features = ["http2"] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
essential-builder-api = { path = ".", features = ["test-utils"] }
essential-hash = { workspace = true }
essential-node = { workspace = true, features = ["test-utils"] }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[features]
default = ["tracing"]
test-utils = ["essential-node/test-utils"]
tracing = ["dep:tracing", "essential-node/tracing"]
