[package]
name = "essential-builder-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
essential-builder = { workspace = true }
essential-builder-api = { workspace = true }
essential-builder-db = { workspace = true }
essential-node = { workspace = true }
essential-node-api = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
default = ["tracing"]
tracing = [
    "dep:tracing",
    "dep:tracing-subscriber",
    "essential-node/tracing",
    "essential-node-api/tracing",
    "essential-builder-api/tracing",
]
