[package]
name = "essential-builder-cli"
description = "The Essential builder CLI"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "essential-builder"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
essential-builder = { workspace = true }
essential-builder-api = { workspace = true }
essential-builder-db = { workspace = true }
essential-check = { workspace = true }
essential-node = { workspace = true }
essential-node-api = { workspace = true }
essential-node-types = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
uuid = { workspace = true }

[features]
default = ["tracing"]
tracing = [
    "dep:tracing",
    "dep:tracing-subscriber",
    "essential-builder/tracing",
    "essential-builder-api/tracing",
    "essential-node/tracing",
    "essential-node-api/tracing",
]
