[package]
name = "essential-builder-db"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
essential-hash = { workspace = true }
essential-types = { workspace = true }
postcard = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
