[package]
name = "essential-builder-db"
description = "The Essential builder database"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
essential-builder-types = { workspace = true }
essential-hash = { workspace = true }
essential-types = { workspace = true }
num_cpus = { workspace = true, optional = true }
postcard = { workspace = true }
rusqlite = { workspace = true }
rusqlite-pool = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
essential-check = { workspace = true }

[features]
default = ["pool"]
pool = ["num_cpus", "rusqlite-pool", "rusqlite-pool/tokio", "tokio"]
