[package]
name = "essential-builder"
description = "A block builder library implementation for the Essential protocol"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
essential-builder-db = { workspace = true }
essential-node = { workspace = true }
essential-types = { workspace = true }
num_cpus = { workspace = true }
rusqlite = { workspace = true }
rusqlite-pool = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
