[package]
name = "essential-builder"
description = "A block builder library implementation for the Essential protocol"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
essential-check = { workspace = true }
essential-builder-db = { workspace = true }
essential-builder-types = { workspace = true }
essential-hash = { workspace = true }
essential-node = { workspace = true }
essential-node-db = { workspace = true }
essential-node-types = { workspace = true }
essential-types = { workspace = true }
futures = { workspace = true }
num_cpus = { workspace = true }
rusqlite = { workspace = true }
rusqlite-pool = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
essential-node = { workspace = true, features = ["test-utils"] }
uuid = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
tracing = ["dep:tracing", "essential-check/tracing"]
